finish frontend of project

--- a/src/style/_images.sass
+++ b/src/style/_images.sass
@@ -34,6 +34,9 @@ $section-five__photo: 'http://localhost:5000/images/section-five__photo.jpg'
 //home-page section-seven
 $section-seven__image: 'http://localhost:5000/images/section-seven__image.jpg'
 
+//home section-ten
+$section-ten__subscribe-form: 'http://localhost:5000/images/section-ten__subscribe-form.jpg'
+
 //order-page cart-banner
 $cart-banner__image: 'http://localhost:5000/images/cart-banner__image.jpg'
 $cart-banner__pattern: 'http://localhost:5000/images/cart-banner__pattern.svg'
@@ -46,3 +49,6 @@ $ad-card--two: 'http://localhost:5000/images/ad-card--two.jpg'
 $gallery-card--one: 'http://localhost:5000/images/gallery-card--one.jpg'
 $gallery-card--two: 'http://localhost:5000/images/gallery-card--two.jpg'
 $gallery-card--three: 'http://localhost:5000/images/gallery-card--three.jpg'
+
+//news cards
+$news-card__author-pattern: 'http://localhost:5000/images/news-card__author-pattern.svg'
