--- a/src/components/Card/Product/BigProductCard/ProductDescription/ProductDescription.module.sass
+++ b/src/components/Card/Product/BigProductCard/ProductDescription/ProductDescription.module.sass
@@ -13,3 +13,11 @@
     margin: 0 auto
     width: 70%
     text-align: center
+
+@media only screen and (max-width: 576px)
+  .product-description
+    &__buttons
+      grid-column-gap: 10px
+
+    &__text
+      width: 90%
