--- a/src/components/Footer/ContactUs/ContactUs.module.sass
+++ b/src/components/Footer/ContactUs/ContactUs.module.sass
@@ -17,3 +17,8 @@
       transition: color 300ms
     a:hover
       color: $green
+
+@media only screen and (max-width: 992px)
+  .contact-us
+    text-align: center
+    width: 100%
