--- a/src/components/Home/SectionEight/SectionEight.module.sass
+++ b/src/components/Home/SectionEight/SectionEight.module.sass
@@ -7,3 +7,7 @@
   background-color: $light-green
   padding: 200px 0
   width: 100vw
+
+@media only screen and (max-width: 768px)
+  .section-eight
+    @include flex(row, center, normal)
