--- a/src/components/Home/SectionSix/SectionSix.module.sass
+++ b/src/components/Home/SectionSix/SectionSix.module.sass
@@ -12,4 +12,6 @@
     margin: 20px 0 40px
 
   &__products
-    @include flex(row, space-between, center)
+    @include flex(row, center, center)
+    flex-wrap: wrap
+    grid-gap: 80px
