--- a/src/components/Home/SectionThree/SectionThree.module.sass
+++ b/src/components/Home/SectionThree/SectionThree.module.sass
@@ -43,3 +43,10 @@
       background: url($section-three__icon--one) center no-repeat, $white
     &--two
       background: url($section-three__icon--two) center no-repeat, $white
+
+@media only screen and (max-width: 992px)
+  .section-three
+    &__image
+      display: none
+    &__content
+      width: 100%
