--- a/src/components/Order/OrderList/ProductItem/ProductItem.module.sass
+++ b/src/components/Order/OrderList/ProductItem/ProductItem.module.sass
@@ -13,3 +13,8 @@
 
   &__text
     @extend .heading-h6
+
+@media only screen and (max-width: 992px)
+  .product-item
+    &__image
+      display: none
