--- a/src/components/Button/Button.module.sass
+++ b/src/components/Button/Button.module.sass
@@ -37,3 +37,7 @@
       background-color: $light-gray
       color: $blue
       border: 1px solid $yellow
+
+@media only screen and (max-width: 768px)
+  .btn
+    @include border(1px solid transparent, 180px, 60px, .8em)
