--- a/src/components/Card/Product/BigProductCard/ProductForm/ProductForm.module.sass
+++ b/src/components/Card/Product/BigProductCard/ProductForm/ProductForm.module.sass
@@ -12,3 +12,8 @@
     text-align: center
     color: $blue
     margin: 0 25px
+
+@media only screen and (max-width: 1200px)
+  .product-form
+    span
+      display: none
