--- a/src/components/Card/Product/CloseButton/CloseButton.module.sass
+++ b/src/components/Card/Product/CloseButton/CloseButton.module.sass
@@ -15,3 +15,8 @@
 .close-button:hover
   background-color: $light-gray
   color: $blue
+
+@media only screen and (max-width: 576px)
+  .close-button
+    @include border(1px solid $blue, 40px, 20px, 1em)
+    margin: 10px
