--- a/src/components/Footer/Footer.module.sass
+++ b/src/components/Footer/Footer.module.sass
@@ -19,3 +19,19 @@
       width: 1px
       height: 350px
       background: $gray
+
+@media only screen and (max-width: 992px)
+  .footer
+    &__content
+      @include flex(column, center, center)
+      grid-row-gap: 30px
+      text-align: center
+      margin: 0
+    &__delimiter
+      &--horizontal
+        width: 1px
+        height: 350px
+
+      &--vertical
+        width: 100vw
+        height: 1px
