--- a/src/components/Footer/UtilityPages/UtilityPages.module.sass
+++ b/src/components/Footer/UtilityPages/UtilityPages.module.sass
@@ -12,3 +12,7 @@
       transition: color 300ms
     .link:hover
       color: $green
+
+@media only screen and (max-width: 992px)
+  .utility-pages
+    width: 100%
