--- a/src/components/Order/OrderList/ProductFormUpdate/ProductFormUpdate.module.sass
+++ b/src/components/Order/OrderList/ProductFormUpdate/ProductFormUpdate.module.sass
@@ -12,3 +12,10 @@
     text-align: center
     color: $blue
     margin: 0 25px
+
+@media only screen and (max-width: 992px)
+  .product-form
+    span
+      display: none
+    input
+      @include border(2px solid $blue, 65px, 40px, .8em)
